--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "pino": "^9.9.0",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "zod": "^4.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
