--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
-    "types": ["node"]
+    "types": ["jest", "node"]
   },
   "include": ["src","**/*.ts"],
   "exclude": ["node_modules", "dist"]
