--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "pino": "^9.9.0",
     "prisma": "^6.14.0",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "create-jest": "^30.0.5",
     "jest": "^30.0.5",
     "supertest": "^7.1.4",
