--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     depends_on:
       - postgres
     environment:
+      PORT: 5000
       DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/mydb"
     volumes:
       - .:/app
